# Parrondos-Paradox-Quantum-Walk

./: .gitignore  README.md  dev.yaml  pyproject.toml  requirements-extra.txt  requirements-lock.txt  requirements.txt
notes/: READINESS_REPORT.md
outputs/run_20260210_124831_stage0_jan/: config_used.yaml  logs.txt  manifest.json  metrics_A.npz  metrics_ABB.npz  metrics_B.npz  metrics_summary.json  resolved_config.yaml
outputs/run_20260210_135419_stage1_defect_phi/: config_used.yaml  logs.txt  manifest.json  metrics_summary.json  phi_scan_ABB.npz  resolved_config.yaml
outputs/run_20260210_144641_stage2_pd_atlas/: atlas.npz  logs.txt  manifest.json  metrics_summary.json  resolved_config.yaml
outputs/run_20260212_090815_stage3_pd_confirmatory/: atlas.npz  config_used.yaml  figure_sidecar_summary.json  logs.txt  manifest.json  metrics_summary.json
reports/: stage3_counts_by_p.csv  stage3_insights_report.md  stage3_parrondo_points.csv  stage3_top_adv_points.csv
scripts/: paper_readiness_report.py  stage0_jan_replication.py  stage1_defect_phi_scan.py  stage2_pd_atlas.py  stage2_postprocess_figures.py  stage3_confirmatory_pd_atlas_cpu.py  stage3_extract_insights.py  stage3_postprocess_figures.py
scripts/dev/: metrics_sanity_check.py  pd_debug.py  unitary_debug.py  update_dev_yaml_stage1.py  update_dev_yaml_stage2.py
src/dtqw/: coins.py  defect.py  io.py  metrics.py  noise.py  shift.py  simulate.py
src/tests/: test_defect_phi0_noop.py  test_metrics_sanity.py  test_pd_channel_sanity.py  test_pd_p0_matches_unitary.py  test_shift_no_wraparound.py  test_smoke.py  (+1 more)
