[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dtqw-parrando"
version = "0.0.0"
description = "Parrando transport in single-qubit coined DTQWs"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["dtqw*"]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
